# PublicVulkanApp

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
Headers/: DeviceManager.h  GraphicsPipeline.h  Instance.h  InstanceManager.h  SwapChain.h  SwapChainSupportDetails.h  VulkanApp.h  Window.h
Headers/Core/: CommandManager.h  DescriptorManager.h  DescriptorSetLayout.h  DescriptorSetManager.h  DeviceManager.h  FrameBuffer.h  GraphicsPipeline.h  Helpers.h  Image.h  QueueFamilyIndicesHeader.h  RenderPass.h  SwapChain.h  SwapChainSupportDetails.h  UniformBuffer.h  VertexBuffer.h  VulkanApp.h  Window.h
scripts/: fetch_assets.ps1
shaders/: brdf_lut.comp  depth_prepass.frag  depth_prepass.vert  equirect_to_cube.comp  geometry.frag  geometry.vert  irradiance_conv.comp  lighting.frag  lighting.vert  prefilter_env.comp  shader.frag  shader.vert  shadow.frag  shadow.vert  tonemapping.frag  tonemapping.vert
src/: CommandManager.cpp  Delete.h  DescriptorSetLayout.cpp  Device.cpp  DeviceManager.cpp  FrameBuffer.cpp  GraphicsPipeline.cpp  Image.cpp  Instance.cpp  InstanceManager.cpp  Main.cpp  RenderPass.cpp  Renderer.cpp  Renderer.h  SwapChain.cpp  UniformBuffer.cpp  VertexBuffer.cpp  VulkanApp.cpp  Window.cpp
src/Core/: CommandManager.cpp  CommandManager.h  Device.cpp  Device.h  Instance.cpp  Instance.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
src/Rendering/: Descriptors.cpp  Descriptors.h  FrameBuffer.cpp  FrameBuffer.h  GBuffer.cpp  GBuffer.h  HDRBuffer.cpp  HDRBuffer.h  IBL.cpp  IBL.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  ShadowMap.cpp  ShadowMap.h  UniformBuffer.cpp  UniformBuffer.h
src/Resources/: Buffer.cpp  Buffer.h  DepthBuffer.cpp  DepthBuffer.h  GltfLoader.cpp  GltfLoader.h  Material.h  Mesh.h  ModelLoader.cpp  ModelLoader.h  Texture.cpp  Texture.h
src/Scene/: Camera.cpp  Camera.h
